--- a/src/main/java/application/soilapertetgradecalculator/GradeCalculatorView.fxml
+++ b/src/main/java/application/soilapertetgradecalculator/GradeCalculatorView.fxml
@@ -8,6 +8,7 @@
 <?import javafx.scene.layout.*?>
 
 
+<?import javafx.collections.FXCollections?>
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <HBox prefHeight="26.0" prefWidth="600.0">
@@ -31,7 +32,28 @@
       <HBox prefHeight="31.0" prefWidth="600.0">
          <children>
             <Label text="Required Coding Challenges Passed: " />
-            <ChoiceBox prefHeight="25.0" prefWidth="50.0" />
+            <ChoiceBox prefHeight="25.0" prefWidth="50.0">
+               <items>
+                  <FXCollections fx:factory="observableArrayList">
+                     <String fx:value="0"/>
+                     <String fx:value="1"/>
+                     <String fx:value="2"/>
+                     <String fx:value="3"/>
+                     <String fx:value="4"/>
+                     <String fx:value="5"/>
+                     <String fx:value="6"/>
+                     <String fx:value="7"/>
+                     <String fx:value="8"/>
+                     <String fx:value="9"/>
+                     <String fx:value="10"/>
+                     <String fx:value="11"/>
+                     <String fx:value="12"/>
+                     <String fx:value="13"/>
+                     <String fx:value="14"/>
+                     <String fx:value="15"/>
+                  </FXCollections>
+               </items>
+            </ChoiceBox>
          </children>
          <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
@@ -43,7 +65,20 @@
       <HBox prefHeight="27.0" prefWidth="600.0">
          <children>
             <Label text="Optional Coding Challenges Passed: " />
-            <ChoiceBox prefHeight="25.0" prefWidth="50.0" />
+            <ChoiceBox prefHeight="25.0" prefWidth="50.0">
+               <items>
+                  <FXCollections fx:factory="observableArrayList">
+                     <String fx:value="0"/>
+                     <String fx:value="1"/>
+                     <String fx:value="2"/>
+                     <String fx:value="3"/>
+                     <String fx:value="4"/>
+                     <String fx:value="5"/>
+                     <String fx:value="6"/>
+                     <String fx:value="7"/>
+                  </FXCollections>
+               </items>
+            </ChoiceBox>
          </children>
          <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
