--- a/src/main/java/application/soilapertetgradecalculator/GradeCalculatorView.fxml
+++ b/src/main/java/application/soilapertetgradecalculator/GradeCalculatorView.fxml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.collections.*?>
 <?import javafx.geometry.*?>
 <?import java.lang.*?>
 <?import java.util.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-
-
 <?import javafx.collections.FXCollections?>
+
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <HBox prefHeight="26.0" prefWidth="600.0">
@@ -18,7 +18,7 @@
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </HBox.margin>
             </Label>
-            <TextField />
+            <TextField fx:id="projectGradeLabel" />
             <Label text="\%">
                <HBox.margin>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
@@ -32,25 +32,25 @@
       <HBox prefHeight="31.0" prefWidth="600.0">
          <children>
             <Label text="Required Coding Challenges Passed: " />
-            <ChoiceBox prefHeight="25.0" prefWidth="50.0">
+            <ChoiceBox fx:id="requiredCodingChallengesChoiceBox" prefHeight="25.0" prefWidth="50.0">
                <items>
                   <FXCollections fx:factory="observableArrayList">
-                     <String fx:value="0"/>
-                     <String fx:value="1"/>
-                     <String fx:value="2"/>
-                     <String fx:value="3"/>
-                     <String fx:value="4"/>
-                     <String fx:value="5"/>
-                     <String fx:value="6"/>
-                     <String fx:value="7"/>
-                     <String fx:value="8"/>
-                     <String fx:value="9"/>
-                     <String fx:value="10"/>
-                     <String fx:value="11"/>
-                     <String fx:value="12"/>
-                     <String fx:value="13"/>
-                     <String fx:value="14"/>
-                     <String fx:value="15"/>
+                     <String fx:value="0" />
+                     <String fx:value="1" />
+                     <String fx:value="2" />
+                     <String fx:value="3" />
+                     <String fx:value="4" />
+                     <String fx:value="5" />
+                     <String fx:value="6" />
+                     <String fx:value="7" />
+                     <String fx:value="8" />
+                     <String fx:value="9" />
+                     <String fx:value="10" />
+                     <String fx:value="11" />
+                     <String fx:value="12" />
+                     <String fx:value="13" />
+                     <String fx:value="14" />
+                     <String fx:value="15" />
                   </FXCollections>
                </items>
             </ChoiceBox>
@@ -65,17 +65,17 @@
       <HBox prefHeight="27.0" prefWidth="600.0">
          <children>
             <Label text="Optional Coding Challenges Passed: " />
-            <ChoiceBox prefHeight="25.0" prefWidth="50.0">
+            <ChoiceBox fx:id="OptionalCodingChallengesChoiceBox" prefHeight="25.0" prefWidth="50.0">
                <items>
                   <FXCollections fx:factory="observableArrayList">
-                     <String fx:value="0"/>
-                     <String fx:value="1"/>
-                     <String fx:value="2"/>
-                     <String fx:value="3"/>
-                     <String fx:value="4"/>
-                     <String fx:value="5"/>
-                     <String fx:value="6"/>
-                     <String fx:value="7"/>
+                     <String fx:value="0" />
+                     <String fx:value="1" />
+                     <String fx:value="2" />
+                     <String fx:value="3" />
+                     <String fx:value="4" />
+                     <String fx:value="5" />
+                     <String fx:value="6" />
+                     <String fx:value="7" />
                   </FXCollections>
                </items>
             </ChoiceBox>
@@ -90,9 +90,9 @@
       <HBox prefHeight="44.0" prefWidth="590.0">
          <children>
             <Label text="Average Quiz Grade: " />
-            <Slider majorTickUnit="1.0" max="10.0" minorTickCount="1" showTickLabels="true" showTickMarks="true">
+            <Slider fx:id="quizGradeSlider" majorTickUnit="1.0" max="10.0" minorTickCount="1" showTickLabels="true" showTickMarks="true">
                <HBox.margin>
-                  <Insets bottom="5.0" left="5.0" right="5.0" top="10.0" />
+                  <Insets bottom="5.0" left="5.0" right="5.0" />
                </HBox.margin>
             </Slider>
          </children>
@@ -103,7 +103,7 @@
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </VBox.margin>
       </HBox>
-      <Button mnemonicParsing="false" text="Calculate Grade">
+      <Button mnemonicParsing="false" onAction="#calculateGrade" text="Calculate Grade">
          <VBox.margin>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </VBox.margin>
