--- a/src/main/java/application/GradeCalculatorView.fxml
+++ b/src/main/java/application/GradeCalculatorView.fxml
@@ -35,22 +35,22 @@
             <ChoiceBox fx:id="requiredCodingChallengesChoiceBox" prefHeight="25.0" prefWidth="50.0">
                <items>
                   <FXCollections fx:factory="observableArrayList">
-                     <String fx:value="0" />
-                     <String fx:value="1" />
-                     <String fx:value="2" />
-                     <String fx:value="3" />
-                     <String fx:value="4" />
-                     <String fx:value="5" />
-                     <String fx:value="6" />
-                     <String fx:value="7" />
-                     <String fx:value="8" />
-                     <String fx:value="9" />
-                     <String fx:value="10" />
-                     <String fx:value="11" />
-                     <String fx:value="12" />
-                     <String fx:value="13" />
-                     <String fx:value="14" />
-                     <String fx:value="15" />
+                     <Integer fx:value="0" />
+                     <Integer fx:value="1" />
+                     <Integer fx:value="2" />
+                     <Integer fx:value="3" />
+                     <Integer fx:value="4" />
+                     <Integer fx:value="5" />
+                     <Integer fx:value="6" />
+                     <Integer fx:value="7" />
+                     <Integer fx:value="8" />
+                     <Integer fx:value="9" />
+                     <Integer fx:value="10" />
+                     <Integer fx:value="11" />
+                     <Integer fx:value="12" />
+                     <Integer fx:value="13" />
+                     <Integer fx:value="14" />
+                     <Integer fx:value="15" />
                   </FXCollections>
                </items>
             </ChoiceBox>
@@ -65,17 +65,17 @@
       <HBox prefHeight="27.0" prefWidth="600.0">
          <children>
             <Label text="Optional Coding Challenges Passed: " />
-            <ChoiceBox fx:id="OptionalCodingChallengesChoiceBox" prefHeight="25.0" prefWidth="50.0">
+            <ChoiceBox fx:id="optionalCodingChallengesChoiceBox" prefHeight="25.0" prefWidth="50.0">
                <items>
                   <FXCollections fx:factory="observableArrayList">
-                     <String fx:value="0" />
-                     <String fx:value="1" />
-                     <String fx:value="2" />
-                     <String fx:value="3" />
-                     <String fx:value="4" />
-                     <String fx:value="5" />
-                     <String fx:value="6" />
-                     <String fx:value="7" />
+                     <Integer fx:value="0" />
+                     <Integer fx:value="1" />
+                     <Integer fx:value="2" />
+                     <Integer fx:value="3" />
+                     <Integer fx:value="4" />
+                     <Integer fx:value="5" />
+                     <Integer fx:value="6" />
+                     <Integer fx:value="7" />
                   </FXCollections>
                </items>
             </ChoiceBox>
