--- a/src/main/java/application/GradeCalculatorView.fxml
+++ b/src/main/java/application/GradeCalculatorView.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.paint.*?>
 <?import javafx.collections.*?>
 <?import javafx.geometry.*?>
 <?import java.lang.*?>
@@ -20,6 +21,11 @@
             </Label>
             <TextField fx:id="projectGradeLabel" />
             <Label text="\%">
+               <HBox.margin>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </HBox.margin>
+            </Label>
+            <Label fx:id="errorLabel" text="" textFill="RED">
                <HBox.margin>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </HBox.margin>
