--- a/src/main/java/application/GradeCalculatorView.fxml
+++ b/src/main/java/application/GradeCalculatorView.fxml
@@ -114,5 +114,10 @@
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </VBox.margin>
       </Button>
+      <Label fx:id="courseGradeLabel" text="">
+         <VBox.margin>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </VBox.margin>
+      </Label>
    </children>
 </VBox>
